<resources>
    <string name="app_name">Formula 1</string>
    <string name="next_race">Next race</string>
    <string name="calendar">Calendar</string>
    <string name="standings">Standings</string>
    <string name="back_button">Back</string>
    <string name="driver_standings">Driver standings</string>
    <string name="constructor_standings">Constructor standings</string>
    <string name="menu">Menu</string>
    <string name="predictions">Predictions</string>
    <string name="bahrain">Bahrain</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="australia">Australia</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="miami">Miami</string>
    <string name="imola">Imola</string>
    <string name="monaco">Monaco</string>
    <string name="spain">Spain</string>
    <string name="canada">Canada</string>
    <string name="austria">Austria</string>
    <string name="great_britain">Great Britain</string>
    <string name="hungary">Hungary</string>
    <string name="belgium">Belgium</string>
    <string name="netherlands">Netherlands</string>
    <string name="monza">Monza</string>
    <string name="singapore">Singapore</string>
    <string name="japan">Japan</string>
    <string name="qatar">Qatar</string>
    <string name="united_states">United States</string>
    <string name="mexico">Mexico</string>
    <string name="brazil">Brazil</string>
    <string name="las_vegas">Las Vegas</string>
    <string name="abu_dhabi">Abu Dhabi</string>
    <string name="no_results">No results yet…</string>
    <string name="points_to_use">How many points do you want to use?</string>
    <string name="select_driver">Select driver</string>
    <string name="current_amount_of_points">Your current amount of points:</string>
    <string name="enter_points">Enter points</string>
    <string name="potential_points_to_win">Potential points to win (x1.2):</string>
    <string name="submit">Submit prediction</string>
    <string name="loading">Loading...</string>
    <string name="loading_failed">Failed to load data!</string>
    <string name="practice_2">Practice 2</string>
    <string name="practice_1">Practice 1</string>
    <string name="practice_3">Practice 3</string>
    <string name="qualifying">Qualifying</string>
    <string name="race">Race</string>
    <string name="sprint">Sprint</string>
    <string name="try_again">Try again</string>
    <string name="startup">Start up</string>
    <string name="nav_predictions">Predictions</string>
    <string name="nav_standings">Standings</string>
    <string name="nav_home">Home</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_menu">Menu</string>
    <string name="constructors">Constructors</string>
</resources>