...
                        .clickable {
                            viewModel.updatePredictionsEnabled(true)
                            viewModel.updateUsedPoints(0.0)
                            viewModel.updatePredictedDriver("")
                            viewModel.setAvailablePoints(2000.0)
                        }
                        .testTag("resetPredictionsButton")
                )
            }
        }
    )
}

...
